<resources>
    <string name="app_name">URPlace</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_creators">Entwickelt von: \n Michael Zemler \n Maximilian Goldbrunner \n Niklas Bauer \n Michael Franz \n \nUnterstützt von: \n Michael Bortlik</string>
    <string name="action_settings">Settings</string>
    <string name="friend_list">Friend List</string>
    <string name="search">Suche</string>

    <string name="cca_comment">Kommentieren, &#8230;</string>
    <string name="cca_send_comment">Kommentar absenden</string>

    <string name="ps_profile_search">Profilsuche</string>
    <string name="male">männlich</string>
    <string name="female">weiblich</string>
    <string name="not_specified">nicht angegeben</string>
    <string name="years">Jahre</string>

    <string name="comment_succesfull">Kommentar wurde erfolgreich abgesendet!</string>
    <string name="comment_unsuccesfull">Es gab einen Fehler beim absenden des Kommentars!</string>

    <string name="te_menu_profile">Profil</string>
    <string name="te_menu_messages">Nachrichten</string>
    <string name="te_menu_favourites">Favouriten</string>
    <string name="te_menu_friendlist">Freundesliste</string>
    <string name="te_menu_search">Profilsuche</string>
    <string name="te_menu_marketplace">Marktplatz</string>
    <string name="te_menu_settings">Einstellungen</string>
    <string name="te_menu_about">Über</string>
    <string name="te_menu_logout">Abmelden</string>
    <string name="te_menu_login">Anmelden</string>
    <string name="te_menu_register">Registrieren</string>

    <string name="te_article_options">Article</string>
    <string name="te_article_options_header">Article bearbeiten:</string>
    <string name="prompt_title_article_options">Title</string>
    <string name="prompt_text_article_options">Beschreibung</string>
    <string name="prompt_categorie_article_options">Kategorie</string>
    <string name="te_article_options_footer">Falls Sie andere Daten des Articles ändern möchten kontaktieren Sie bitte einen Admin.</string>
    <string name="bu_options_delete">Article Löschen</string>

    <string name="te_user_name">Standart Name</string>

    <string name="prompt_articlePicture">Articlebild:</string>

    <string name="example_name">Max Mustermann</string>
    <string name="example_gender">männlich</string>
    <string name="example_age">22 Jahre</string>
    <string name="example_subject">Wirtschaftsinformatik</string>
    <string name="example_post">Dies ist ein example Post! Hier stehen tendenziell viele Informationen drin!</string>
    <string name="example_gps">aus Regensburg</string>
    <string name="example_comment">Dies hist ist ein etwas längerer Kommentar zu deinem Post!</string>
    <string name="example_content_description">Beispielbeschreibung</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="title_activity_friendlist">FriendlistActivity</string>
    <string name="title_activity_marketplace">MarketplaceActivity</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="re_sd_errortitle">Registrationsfehler</string>
    <string name="re_sd_errortext">Undefinierter Fehler!</string>
    <string name="re_pw_errortitle">Registrationsfehler</string>
    <string name="re_pw_errortext">Passwörter stimmen nicht überein!</string>
    <string name="re_pf_errortitle">Registrationsfehler</string>
    <string name="re_pf_errortext">Fehlendes Pflichtfeld!</string>
    <string name="re_ul_errortitle">Registrationsfehler</string>
    <string name="re_ul_errortext">Benutzername zu kurz!</string>
    <string name="re_pl_errortitle">Registrationsfehler</string>
    <string name="re_pl_errortext">Passwort zu kurz!</string>
    <string name="re_ge_title">Geschlecht:</string>
    <string name="pick_image_intent_text">abc</string>

    <string name="se_accountsettins">Account</string>
    <string name="se_autologin_title">Autologin</string>
    <string name="se_autologin_summary">Eingeloggt bleiben</string>
    <string name="se_notificationssettings">Benachrichtigungen</string>
    <string name="se_notification_title">Benachrichtigungen</string>
    <string name="se_notification_summary">Benachrichtigungen aktivieren</string>
    <string name="se_languagesettings">Sprache</string>
    <string name="se_language_title">Sprache</string>
    <string name="se_language_summary">Sprache einstellen</string>

    <string name="lo_errortitle">Loginfehler</string>
    <string name="lo_errortext">Inkorrekte Email oder Passwort!</string>
    <string name="lo_logouttitle">Logout</string>
    <string name="lo_logouttext">Wollen Sie sich wirklich ausloggen?</string>
    <string name="lo_new">Neu hier? Gleich registrieren!</string>
    <string name="prompt_email">Benutzername</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email_register">Benutzername * (min. 4 Zeichen)</string>
    <string name="prompt_password_register">Passwort * (min. 6 Zeichen)</string>
    <string name="prompt_passwordR">Passwort wiederholen *</string>
    <string name="prompt_firstname">Vorname *</string>
    <string name="prompt_lastname">Nachname *</string>
    <string name="prompt_nickname">Spitzname (optional)</string>
    <string name="prompt_birthdate">Geburtsdatum *</string>
    <string name="prompt_gender">Geschlecht *</string>
    <string name="prompt_picture">Profilbild (optional)</string>
    <string name="re_requiredfields">* Pflichtfelder </string>

    <string name="te_menu_options">Optionen</string>
    <string name="te_options_header">Neue Profildaten:</string>
    <string name="te_options_footer">Falls Sie Ihren Vor- oder Nachnamen ändern möchten kontaktieren Sie bitte einen Admin.</string>
    <string name="prompt_nickname_options">Spitzname</string>
    <string name="prompt_gender_options">Geschlecht</string>
    <string name="prompt_subject_options">Studienfach</string>
    <string name="prompt_picture_options">Profilbild</string>
    <string name="bu_options_save">Änderungen speichern</string>
    <string name="bu_options_cancel">Änderungen ververfen</string>


    <string name="action_sign_in">Anmelden</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_shortR">Sign inR</string>
    <string name="action_register">Registrieren</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_back">Zurück</string>

    <string name="angebot_erstellen">Angebot erstellen</string>
    <string name="favoriten">Favoriten</string>
    <string name="eigene_angebote_sehen">Eigene Angebote ansehen</string>
    <string name="angebote_durchsuchen">Angebote durchsuchen</string>
    <string name="marketplace">Marketplace</string>
    <string name="datum">Datum</string>
    <string name="artikel">Artikel</string>
    <string name="preis">Preis</string>
    <string name="titel_hinzufuegen">Titel hinzufügen</string>
    <string name="kategorie">Kategorie</string>
    <string name="beschreibung_hinzufuegen">Beschreibung hinzufügen</string>
    <string name="preis_bestimmen">Preis bestimmen</string>
    <string name="bild_hinzufuegen">Bild hinzufügen</string>
    <string name="ort_hinzufuegen">Ort hinzufügen</string>
    <string name="angebot_veroeffentlichen">Angebot veröffentlichen</string>



    <!-- Strings related to messaging-->
    <string name="send_button">senden</string>
    <string name="message_hint">Nachricht eingeben</string>
    <string name="title_activity_messaging">Nachrichten</string>
    <string name="message_sent">Nachricht gesendet</string>


    <!-- Strings related to friends-->
    <string name="button_fav">FAV/UNFAV</string>
    <string name="button_req">Anfragen</string>
    <string name="input_hint_search">Name eingeben</string>
    <string name="button_search">suchen</string>

</resources>
