<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="@string/se_accountsettins">

        <SwitchPreference
            android:id="@+id/sw_login"
            android:checked="true"
            android:defaultValue="true"
            android:key="updateLoginSetting"
            android:summary="@string/se_autologin_summary"
            android:title="@string/se_autologin_title" />

    </PreferenceCategory>

    <!--
    <PreferenceCategory android:title="@string/se_notificationssettings">
        <SwitchPreference
            android:id="@+id/sw_noti"
            android:defaultValue="false"
            android:key="updateNotificationSetting"
            android:summary="@string/se_notification_summary"
            android:title="@string/se_notification_title" />

    </PreferenceCategory>
    -->

    <PreferenceCategory android:title="@string/se_languagesettings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/appSettingsLanguageListArray"
            android:entryValues="@array/appSettingsLanguageListValues"
            android:key="languageSettings"
            android:summary="@string/se_language_summary"
            android:title="@string/se_language_title" />

    </PreferenceCategory>

</PreferenceScreen>