<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_co_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titel_hinzufuegen"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_co_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kategorie"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_co_add_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/beschreibung_hinzufuegen"
            android:inputType="text"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_co_add_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preis_bestimmen"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_co_add_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bild_hinzufuegen"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bt_co_add_geo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ort_hinzufuegen"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/bt_co_publish_offer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/angebot_veroeffentlichen"
        android:textAllCaps="false" />

</LinearLayout>