<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/article_date"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/datum" />

        <TextView
            android:id="@+id/article_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/artikel" />

        <TextView
            android:id="@+id/article_price"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/preis" />
    </LinearLayout>

</LinearLayout>