<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_pgi_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/iv_pgi_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/example_content_description"
        android:layout_weight="0.1"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/ll_pgi_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_pgi_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_post" />

        <TextView
            android:id="@+id/tv_pgi_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_gps"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>